ci: run tests on push except for `main` branch
Runs CI tests on all pushes, except those to the `main` branch
(these should already be caught by tests in Pull Requests)

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,7 +4,9 @@ on:
   pull_request:
     branches:
       - main
-
+  push:
+    branches-ignore:
+      - main # should already be handled by PR tests
 jobs:
   tests:
     runs-on: ubuntu-latest
